fix route kategori

--- a/views/kategori_view.hbs
+++ b/views/kategori_view.hbs
@@ -40,7 +40,7 @@
   </div>
 
   <!-- Modal Add Kategori-->
-  <form action="/save_kategori" method="post">
+  <form action="/view/save/kategori" method="post">
     <div class="modal fade" id="myModalAddKategori" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -69,7 +69,7 @@
   </form>
 
   <!-- Modal Update Kategori-->
-  <form action="/update_kategori" method="post">
+  <form action="/view/update/kategori" method="post">
     <div class="modal fade" id="EditModalKategori" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -100,7 +100,7 @@
 
   <!-- Modal Delete Produk-->
 
-  <form id="add-row-form" action="/delete_kategori" method="post">
+  <form id="add-row-form" action="/view/delete/kategori" method="post">
     <div class="modal fade" id="DeleteModalKategori" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
       aria-hidden="true">
       <div class="modal-dialog">
